--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,28 @@
   <head>
     <meta charset="UTF-8">
     <title>Whats Cookin</title>
+    <link rel="stylesheet" href="styles.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Whats Cookin</h1>
+    <header class='main-header'>
+      <h1>What's Cookin'</h1>
+      <section class="button-container">
+        <button id='home-button' class='home navButton'>Home</button>
+        <button id='view-favorites-button' class=' view-favorites navButton'>View Favorites</button>
+        <button id='view-recipes' class=' view-to-cook navButton'>View Your Recipes</button>
+    </section>
+    </header>
+    <main>
+      <section class="img-container">
+        <img src="https://images-gmi-pmc.edge-generalmills.com/fe4dc100-e841-455d-ab9f-17aae51c6292.jpg" alt="" class="home-img">
+      </section>
+      <section class="recipe-header-container">
+        <p class="recipe-header">Recipes</p>
+      </section>
+      <section class='all-cards'>
+      </section>
+    </main>
 
     <script type="text/javascript" src="../data/users.js"></script>
     <script type="text/javascript" src="../data/recipes.js"></script>
