--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,12 @@
     <header class='main-header'>
       <h1>What's Cookin'</h1>
       <section class="button-container">
-        <button id='home-button' class='home navButton'>Home</button>
-        <button id='view-favorites-button' class=' view-favorites navButton'>View Favorites</button>
-        <button id='view-recipes' class=' view-to-cook navButton'>View Your Recipes</button>
+        <button id='home-button' class='home-button navButton'>Home</button>
+        <button id='view-favorites-button' class='favorites-button navButton'>View Favorites</button>
+        <button id='view-recipes' class=' add-recipe-button navButton'>View Your Recipes</button>
     </section>
     </header>
-    <main>
+    <main class="home-page">
       <section class="img-container">
         <img src="https://images-gmi-pmc.edge-generalmills.com/fe4dc100-e841-455d-ab9f-17aae51c6292.jpg" alt="" class="home-img">
       </section>
@@ -23,6 +23,16 @@
         <p class="recipe-header">Recipes</p>
       </section>
       <section class='all-cards'>
+      </section>
+    </main>
+    <main hidden class="added-page">
+      <section class="recipe-header-container">
+        <p class="recipe-header">Your Recipes</p>
+      </section>
+    </main>
+    <main hidden class="favorites-page">
+      <section class="recipe-header-container">
+        <p class="recipe-header">Your Favorites</p>
       </section>
     </main>
 
