Add user script

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
     <script type="text/javascript" src="../data/recipes.js"></script>
     <script type="text/javascript" src="../data/ingredients.js"></script>
     <script type="text/javascript" src="./domInsertions.js"></script>
+    <script type="text/javascript" src="../src/User.js"></script>
     <script type="text/javascript" src="./scripts.js"></script>
   </body>
 </html>
