Add card sections

--- a/src/index.html
+++ b/src/index.html
@@ -29,10 +29,14 @@
       <section class="recipe-header-container">
         <p class="recipe-header">Your Recipes</p>
       </section>
+      <section class='added-cards'>
+      </section>
     </main>
     <main hidden class="favorites-page">
       <section class="recipe-header-container">
         <p class="recipe-header">Your Favorites</p>
+      </section>
+      <section class='favs-cards'>
       </section>
     </main>
 
@@ -40,6 +44,7 @@
     <script type="text/javascript" src="../data/recipes.js"></script>
     <script type="text/javascript" src="../data/ingredients.js"></script>
     <script type="text/javascript" src="./domInsertions.js"></script>
+    <script type="text/javascript" src="./iconSources.js"></script>
     <script type="text/javascript" src="../src/User.js"></script>
     <script type="text/javascript" src="./scripts.js"></script>
   </body>
