--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,7 @@
     <script type="text/javascript" src="./iconSources.js"></script>
     <script type="text/javascript" src="../src/User.js"></script>
     <script type="text/javascript" src="../src/Recipe.js"></script>
+    <script type="text/javascript" src="../src/Pantry.js"></script>
     <script type="text/javascript" src="./scripts.js"></script>
   </body>
 </html>
