--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,18 @@
   <body>
     <header class='main-header'>
       <h1>What's Cookin'</h1>
+      <div class="search-container">
+        <select class="categories">
+          <option value="category">Category:</option>
+          <option value="name">Name</option>
+          <option value="type">Type</option>
+          <option value="ingredients">Ingredients</option>
+        </select>
+        <button disabled type="submit-button" class="search-btn">
+          <img src="../assets/search--v2.png" alt="search-button" class="search-icon">
+        </button>
+        <input placeholder="Search" text" class="search-input">
+      </div>
       <section class="button-container">
         <button id='home-button' class='home-button navButton'>Home</button>
         <button id='view-favorites-button' class='favorites-button navButton'>View Favorites</button>
