Edit option name, add search page

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
           <option value="category">Category:</option>
           <option value="name">Name</option>
           <option value="type">Type</option>
-          <option value="ingredients">Ingredients</option>
+          <option value="ingredients">Ingredient ID :)</option>
         </select>
-        <button disabled type="submit-button" class="search-btn">
+        <button type="submit-button" class="search-btn">
           <img src="../assets/search--v2.png" alt="search-button" class="search-icon">
         </button>
         <input placeholder="Search" text" class="search-input">
@@ -57,6 +57,13 @@
       </section>
       <section class='recipe-instructions'>
         <button class="cook-btn">Cook This Recipe!</button>
+      </section>
+    </main>
+    <main hidden class="search-page">
+      <section class="recipe-header-container">
+        <p class="recipe-search-header">Recipes Found</p>
+      </section>
+      <section class='recipe-matches'>
       </section>
     </main>
 
