--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <h1>What's Cookin'</h1>
       <div class="search-container">
         <select class="categories">
-          <option value="category">Category:</option>
+          <option value="category">Select A Filter:</option>
           <option value="name">Name</option>
           <option value="type">Type</option>
           <option value="ingredients">Ingredient ID :)</option>
@@ -19,7 +19,7 @@
         <button type="submit-button" class="search-btn">
           <img src="../assets/search--v2.png" alt="search-button" class="search-icon">
         </button>
-        <input placeholder="Search" text" class="search-input">
+        <input disabled placeholder="Search" text" class="search-input">
       </div>
       <section class="button-container">
         <button id='home-button' class='home-button navButton'>Home</button>
